--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <!-- End of To-DO Section -->
 
         <!-- View Options Section -->
+        <div class="row"></div>
         <!-- End of View Option Section -->
 
 
