--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         <!-- End of To-DO Section -->
 
         <!-- View Options Section -->
-        <div class="row"></div>
+        <div class="row">
+            <div class="col-auto"></div>
+        </div>
         <!-- End of View Option Section -->
 
 
