--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do-List</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <!-- FontAwesome CDN -->
     <link rel="stylesheet" href="	https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.css">
     <!-- Bootstrap File -->
@@ -46,8 +48,25 @@
         <!-- End of To-DO Section -->
 
         <!-- View Options Section -->
-        <div class="row">
-            <div class="col-auto"></div>
+        <div class="row m-1 p-3 px-5 justify-content-end">
+            <div class="col-auto d-flex align-items-center">
+                <label class="text-secondary my-2 pr-2 view-opt-label" for="filter">Filter</label>
+                <select class="custom-select custom-select-sm btn my-2" name="select" id="select">
+                    <option value="all" selected>All</option>
+                    <option value="completed">Completed</option>
+                    <option value="active">Active</option>
+                    <option value="has-due-date">Has due date</option>
+                </select>
+            </div>
+            <div class="col-auto d-flex align-items-center px-1 pr-3">
+                <label class="text-secondary my-2 pr-2 view-opt-label" for="sort">Sort</label>
+                <select class="custom-select custom-select-sm btn my-2" name="select" id="select">
+                    <option value="active" selected>Added date</option>
+                    <option value="due-date-desc">Due date</option>
+                </select>
+                <i class="fa fa fa-sort-amount-asc text-info btn mx-0 px-0 pl-1" data-toggle="tooltip" data-placement="bottom" title="Ascending"></i>
+                <i class="fa fa fa-sort-amount-desc text-info btn mx-0 px-0 pl-1 d-none" data-toggle="tooltip" data-placement="bottom" title="Descending"></i>
+            </div>
         </div>
         <!-- End of View Option Section -->
 
